--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
                     <nav>
                         <ul class="primary-nav">
                             <li><a href="#agenda">Agenda</a></li>
-                            <li><a href="#parroquia">Parroquia</a></li>
                             <li><a href="#finca" class="login">Finca</a></li>
                             <li><a href="#regalo" class="login">Regalo</a></li>
                             <li><a href="#eng-fotos">Fotos</a></li>
@@ -161,30 +160,6 @@
 
 </section>
 
-<section id="parroquia" class="section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h3 class="header" style="padding-bottom: 0;">Parroquia de San Jorge<br>
-                    <p><span style="font-size: 11px;"><em>C. del Padre Damián, 22</p></em></span>
-                </h3>
-            </div>
-            <div class="col-md-7 text-center"><img src="img/sanjorgedrawing.png" style="max-width: 60%; height: auto;" class="wp1"></div>
-            <div class="col-md-5"> 
-                <p>
-                    <br>
-                    Tras 8 años creciendo juntos, la parroquia de San Jorge se convierte en el lugar más significativo para el inicio de esta nueva etapa.
-                    Nuestra historia personal se entrelaza con este espacio haciendo que nuestra boda adquiera un significado aún más especial. 
-                </p>
-                <p align="center">
-                    <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3035.8679627119986!2d-3.6878607241104926!3d40.45605927143328!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42291e6095a79b%3A0xf9b7a6160f3af988!2sParroquia%20de%20San%20Jorge!5e0!3m2!1sen!2sbe!4v1697999513489!5m2!1sen!2sbe" 
-                    frameborder="0" marginheight="0" marginwidth="0" style="height: 60%; width: 60%;">Loading…</iframe>
-                 </p>
-            </div>
-        </div>
-    </div>
-</section>
-
 <section id="finca" class="section">
     <div class="container">
         <div class="row">
@@ -232,9 +207,10 @@
                 <p>Nuestro mayor regalo es tu presencia.
                 ¡¡Muchísimas gracias por compartir este día con nosotros!!  
                 Nos hace inmensamente felices. <br>
-                Sin embargo, si quieres tener un detalle con nosotros puedes ayudarnos con el viaje de novios y nuestra nueva vida juntos. 
+                Sin embargo, si quieres tener un detalle con nosotros puedes ayudarnos con el viaje de novios y nuestra vida juntos.
                 </p>
-                <p><em>ES55 0182 5322 2402 0666 2211</em></p>
+                Aris Peribañez Sánchez-Moreno <br>
+                <p><em>ES43 0049 5142 1822 1622 7512</em></p>
             </div>
         </div>
     </div>
@@ -328,25 +304,12 @@
                 <p>
                 Te agradecemos enormemente si puedes compartir tus fotos de la preboda y la boda en el siguiente enlace de Google Photos. <br>
                 </p>
-                <p><em><a href="https://photos.app.goo.gl/25a8w95BASsA8kVH7">https://photos.app.goo.gl/25a8w95BASsA8kVH7</a></em></p>
+                <p><em><a href="https://photos.app.goo.gl/ty2W5s7x1txD7tFA9">https://photos.app.goo.gl/ty2W5s7x1txD7tFA9</a></em></p>
             </div>
         </div>
     </div>
 </section>
 
-<section class="rsvp text-center" id="rsvp">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h3 class="header">RSVP</h3>
-            </div>
-        </div>
-    <div class="embed-responsive embed-responsive-4by3" style="height: 100vh;">
-        <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSfU-2yQN_Wj_RCeQPjRdudWfzuKoGq5C8fuWSze2onSVhm6ow/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" style="height: 100%;">Loading…</iframe>
-    </div>
-        <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfU-2yQN_Wj_RCeQPjRdudWfzuKoGq5C8fuWSze2onSVhm6ow/viewform?embedded=true" width="400" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
-    </div>
-</section>
 
 <footer>
     <div class="container">
@@ -354,7 +317,7 @@
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
                 <p>
-                    <strong>ANA & JAVI</strong>
+                    <strong>TERE & GERMÁN</strong>
                     <br>
                     617429754 | 636671062
                 </p>
