--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
-                            <li><a href="#agenda">Agenda</a></li>
+                            <li><a href="#agenda" class="login">Agenda</a></li>
                             <li><a href="#finca" class="login">Finca</a></li>
                             <li><a href="#regalo" class="login">Regalo</a></li>
-                            <li><a href="#eng-fotos">Fotos</a></li>
+                            <li><a href="#eng-fotos" class="login">Fotos</a></li>
+                            <li><a href="#info" class="login">Información</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -104,7 +105,6 @@
         </div>
     </div>
 </section>
-
 
 <section class="events section-padding" id="agenda">
     <div class="container">
@@ -305,6 +305,70 @@
 </section>
 
 
+
+<section id="info" class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header">Información adicional</h3>
+            </div>
+            <div class="leftcol">
+                <h4 class="header">Buitrago del Lozoya</h4>
+                <p><strong>¿Dónde se encuentra Buitrago del Lozoya?</strong></p>
+                <p>
+                En vehículo particular, si se viaja desde Madrid, hay que desviarse en las salidas 74 ó 76 de la A1 - carretera de Burgos. Desde la ciudad se requiere, si no hay demasiado tráfico, de alrededor de 45/50 minutos. 
+                En transporte público el autobús interurbano de la línea 191 parte del intercambiador de Plaza de Castilla cada hora en días de diario u hora y media/dos horas tanto sábados como domingos (consultar horarios aproximados y paradas). Hay que estimar una duración en autobús de alrededor de noventa minutos, prácticamente el doble que en coche.
+                Qué hacer en Buitrago y alrededores. 
+                </p>
+
+                <p><strong>Opciones para extender la visita</strong></p>
+                <p>
+                Opciones para extender la visita a Buitrago no son pocas. He aquí algunas: <br>
+                Si no llegáis el viernes a la visita por el pueblo os recomendamos no perderoslo. Os dejamos los sitios que consideramos imprescindibles para visitar en Buitrago del Lozoya. Están prácticamente en orden, con la ruta más óptima para visitarlos. ¡Son espectaculares! Museo Picasso, Plaza de la Constitución y Torre del Reloj (principal acceso a la muralla), Arco de las Nieves, Iglesia de Santa María del Castillo, Muralla alta y exposición «Dos milenios de artillería» (entradas para acceder a ella, ticket 2€), Adarve bajo o muralla baja, Jardín medieval: Parque de la Villa, El Castillo de los Mendoza y la Coracha. <br>
+                A escasos 2 kilómetros de la villa en el entorno del embalse de Riosequillo se encuentra una opción refrescante, las Piscinas naturales de Buitrago del Lozoya en el Área Recreativa de Riosequillo. Una de las piscinas más grandes de España al ras del pantano y con unas vistas excepcionales de la Sierra de Guadarrama. Tiene gran capacidad, césped, sombrillas, vestuarios, un bar-restaurante y merenderos al aire libre en unas instalaciones más que adecuadas. Abre de mediados de junio a finales de agosto todos los días de la semana, excepto lunes, de 11:00 a 20:00 horas. Entre semana la entrada general cuesta 4€ (niños hasta 12 años, familias numerosas, pensionistas y discapacitados pagan 3€). Los fines de semana el precio sube a 5€ la general y 3.50€ la reducida. ¡¡Hay que estar con tiempo que se llena!! <br>
+                En Paredes de Buitrago podéis hacer la Ruta del Frente del Agua. A 12 km de Buitrago del Lozoya, sobreviven los restos de una de las batallas olvidadas de la Guerra Civil Española. Búnkeres del bando nacional y republicano, así como zigzagueantes trincheras con sus propios refugios, se alinean en una frontera para la Historia donde el objetivo era dominar el agua que abastecía a Madrid en el Pantano de Puentes Viejas. <br>
+                Tenéis otras rutas como la Senda de las Gariñas, la Senda del Embalse del Riosequillo o la Senda del Cerro de Cinco Villas. La mayoría aparecen en Wikilok, aunque también podéis obtener esta información en la web de la Oficina de Turismo. <br>
+                Por otro lado, y como planazo para los meses más calurosos, podéis alquilar unas piraguas y recorrer a vuestro aire el Río Lozoya, alrededor de la muralla. Todo un planazo que acabaremos haciendo. La empresa Aventura Sierra Norte opera en el área y hemos visto que tiene muchas posibilidades. <br>
+                Museo Picasso – Colección Eugenio Arias: Si os gusta el arte y los museos, entonces este es un imprescindible que ver en Buitrago de Lozoya.  El museo Picasso está ubicado en el Ayuntamiento de Buitrago de Lozoya desde 1985. El museo se creó gracias a la donación del peluquero de Picasso, Eugenio Arias, el cual guardó más de 60 obras del reconocido artista por más de 26 años. Todas estas obras fueron trasladadas desde Francia a Madrid. <br>
+                Para los más deportistas está el Polideportivo municipal, a través del cuál podréis alquilar la pista de pádel (Calle Miramontes, 4 28730 Buitrago del Lozoya Madrid) https://buitrago.org/servicios/escuelas-deportivas-municipales. Instalaciones: Lunes a viernes de 09:00 a 22:00 h. Sábados de 09:30 a 14:30 h. Administración: Lunes a viernes de 09:00 a 16:00 h. Alquiler de la pista de pádel de lunes a sábados en el teléfono 674 38 12 74. Domingos y festivos en el teléfono 617 96 50 24. <br>
+                Más información sobre Buitrago del Lozoya en la Oficina de Turismo: C/ Tahona, 19. Teléfonos: 91 868 16 15 y 674 38 12 44. Web: turismo.buitrago.org <br>
+                </p>
+                
+                <p><strong>Peluquerías</strong></p>
+                <p>
+                Peluquería AIRE UNISEX - 918 68 14 22 <br>
+                Peluquería Estrella Barroso Perna - 918 68 09 51 <br>
+                Peluquería La niña de los peines - 623 47 73 93 <br>
+                Barber norte - 633 47 28 96 <br>
+                Peluquería de varones Dos Amigos - 624 81 80 30 <br>
+                Barba-Dos - 636 26 44 55 <br>
+                </p>
+
+                <p><strong>Dónde comer en Buitrago del Lozoya</strong></p>
+                <p>
+                Aquí os dejamos algunas recomendaciones gastronómicas tanto en Buitrago de Lozoya como en los alrededores. Pero…¡¡hay muchos más!! <br>
+
+                Asador Las Murallas - Buitrago del lozoya - 918 68 04 84 <br>
+                Restaurante El espolón- Buitrago del lozoya - 918 68 14 49 <br>
+                Cueva El matador- El molar - 918 41 03 93 <br>
+                Restaurante El tascon - El Cuadron - 615 09 37 55 <br>
+                Parrilla Groucho - Harpo Restaurante - Pinilla de buitrago -  918 69 50 84 <br>
+                Taberna del chato - San Mamés - 674 02 59 69 <br>
+                Restaurante Arandinos Collaspino - Gascones -  615 39 75 96 <br>
+                Restaurante El rincón de merche - Lozoyuela - 918 69 42 34 <br>
+                Restaurante de serrada - Serrada de la fuente - 636 27 80 63 <br>
+                </p>
+
+                <p><strong>Para dejar el coche</strong></p>
+                <p>
+                Por el pueblo hay sitios para aparcar pero, por si acaso, os dejamos la recomendación de un espacio para aparcar muy céntrico. Está al aire libre y gratuito. Parking Plaza del Belen Viviente. Pl. del Belén Viviente, 4.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 <footer>
     <div class="container">
         <div class="row">
@@ -313,12 +377,14 @@
                 <p>
                     <strong>TERE & GERMÁN</strong>
                     <br>
-                    617429754 | 636671062
+                    605077060 | 634831082
                 </p>
             </div>
         </div>
     </div>
 </footer>
+
+
 <script src="js/vendor/jquery-1.11.2.min.js" onerror="loadJsFromCDN('jquery.js')"></script>
 <script src="node_modules/waypoints/lib/jquery.waypoints.min.js" onerror="loadJsFromCDN('waypoints.js')"></script>
 <script src="js/jquery.fancybox.pack.js"></script>
