--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         <ul class="primary-nav">
                             <li><a href="#agenda" class="login">Agenda</a></li>
                             <li><a href="#iglesia" class="login">Iglesia</a></li>
+                            <li><a href="#finca" class="login">Finca</a></li>
                             <li><a href="#regalo" class="login">Regalo</a></li>
                             <li><a href="#eng-fotos" class="login">Fotos</a></li>
                             <li><a href="#info" class="login">Información</a></li>
@@ -91,7 +92,8 @@
             <div class="col-md-12 text-center">
                 <h3>¡Nos casamos!</h3>
                 <p>
-                    <em>26 Julio 2025 - Iglesia de Santa María del Castillo, Buitrago de Lozoya</em> <br>
+                    <em>26 Julio 2025 </em> <br>
+                    <em>Iglesia de Santa María del Castillo, Buitrago de Lozoya</em> <br>
                 </p>
                 </div>
                 <div class="col-md-12">
@@ -119,33 +121,35 @@
                     <p><strong>25 Julio</strong></p>
                     <h5> <em>18:00</em> &nbsp; - &nbsp; Visita a la muralla y pueblo de Buitrago del Lozoya. </a></h5>
                     <p>
-                        Pte de decidir punto de encuentro.
+                        Pendiente de decidir punto de encuentro.
                     </p>
                 </div>
                 <div class="wp5">
-                    <h5><em>20:00</em> &nbsp; - &nbsp; Pre boda</h5>
-                    <p>Además de la boda el sábado 26 de julio, celebraremos una preboda el viernes 25 de julio para daros la bienvenida a Buitrago y calentar motores para el día siguiente. Eso sí, ¡sin desmadres que hay que estar frescos para la boda! </p>
-                    <p>Código de vestimenta: Casual. Pte de saber dónde. </p>
+                    <h5><em>20:00</em> &nbsp; - &nbsp; Preboda</h5>
+                    <p>Queremos daros la bienvenida a Buitrago y calentar motores para el día siguiente. ¡Sin desmadres que hay que estar frescos para la boda! </p>
+                    <p>*Código de vestimenta: Casual. Os iremos informando de la ubicación. </p>
                 </div>
                 <div class="wp5">
                     <h5><em>00:00</em> &nbsp; - &nbsp; Retirada a casa</h5>
-                    <p>Hora de descansar lo mejor está por llegar </p>
+                    <p>Hora de descansar, lo mejor está por llegar. </p>
 
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
                     <p><strong>26 Julio</strong></p>
-                    <h5><em>17:30</em> &nbsp; - &nbsp; Iglesia de Santa María del Castillo, Buitrago de Lozoya.</h5>
+                    <h5><em>17:30</em> &nbsp; - &nbsp; Iglesia de Santa María del Castillo</h5>
                     <p>
                        Sacramento del matrimonio. <br>
-                       *Código de vestimenta: Gala (Formal). Se recomienda el uso de calzado formal cómodo y de tacón ancho para quienes deseen usarlo, ya que la celebración se llevará a cabo sobre césped.
                     </p>
                 </div>
                 <div class="wp6">
-                    <h5><em>19:00</em> &nbsp; - &nbsp; El Esquileo. C. del Infantado, 10, 28730 Buitrago del Lozoya, Madrid</h5>
+                    <h5><em>19:00</em> &nbsp; - &nbsp; El Esquileo</h5>
                     <p>
                         Banquete y celebración. <br>
+                    </p>
+                    <p>
+                    *Código de vestimenta: Gala (Formal). Se recomienda el uso de calzado formal cómodo y de tacón ancho para quienes deseen usarlo, ya que la celebración se llevará a cabo sobre césped.
                     </p>
                 </div>
             </div>
@@ -159,7 +163,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3 class="header" style="padding-bottom: 0;">Iglesia de Santa María del Castillo<br>
-                    <p><span style="font-size: 11px;"><em> Buitrago de Lozoya</p></em></span>
+                    <p><span style="font-size: 11px;"><em> C. de la Villa, 2, 28730 Buitrago del Lozoya, Madrid</p></em></span>
                 </h3>
             </div>
             <div class="col-md-7 text-center"><img src="img/iglesia.png" style="max-width: 80%; height: auto;" class="wp2"></div>
@@ -171,6 +175,30 @@
                 </p>
                 <p align="center">
                     <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3183.911068177618!2d-3.6381061237717094!3d40.99497057135249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd43e43ba0fa0d89%3A0xbdcd839e1bba9e85!2sIglesia%20de%20Santa%20Mar%C3%ADa%20del%20Castillo!5e1!3m2!1ses!2ses!4v1747916423920!5m2!1ses!2ses"
+                    frameborder="0" marginheight="0" marginwidth="0" style="height: 60%; width: 60%;">Loading…</iframe>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="finca" class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header" style="padding-bottom: 0;">El Esquileo<br>
+                    <p><span style="font-size: 11px;"><em>C. del Infantado, 10, 28730 Buitrago del Lozoya, Madrid</p></em></span>
+                </h3>
+            </div>
+            <div class="col-md-7 text-center"><img src="img/finca.png" style="max-width: 80%; height: auto;" class="wp2"></div>
+            <div class="col-md-5"> 
+                <p>
+                    <br>
+                    Situado en el corazón Medieval de Buitrago de Lozoya.
+                    El Esquileo es un lugar mágico que combina la historia con la naturaleza.
+                </p>
+                <p align="center">
+                    <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3183.9179553865592!2d-3.6371492237716665!3d40.994827971352514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd43e5fa94de7697%3A0x67393adcfd5ad5c7!2sEl%20Esquileo!5e1!3m2!1sen!2ses!4v1748178570179!5m2!1sen!2ses"
                     frameborder="0" marginheight="0" marginwidth="0" style="height: 60%; width: 60%;">Loading…</iframe>
                 </p>
             </div>
@@ -299,7 +327,7 @@
             <div class="col-md-12 text-center">
                 <h3 class="header">Información adicional</h3>
             </div>
-            <div class="leftcol">
+            <div class="col-md-12">
                 <h4 class="header">Buitrago del Lozoya</h4>
                 <p><strong>¿Dónde se encuentra Buitrago del Lozoya?</strong></p>
                 <p>
