--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3 class="header" style="padding-bottom: 0;">Iglesia de Santa María del Castillo<br>
-                    <p><span style="font-size: 11px;"><em> C. de la Villa, 2, 28730 Buitrago del Lozoya, Madrid</p></em></span>
+                    <p><span style="font-size: 11px;"><em> 
+                        C. de la Villa, 2, 28730 <br>
+                        Buitrago del Lozoya, Madrid
+                    </p></em></span>
                 </h3>
             </div>
             <div class="col-md-7 text-center"><img src="img/iglesia.png" style="max-width: 80%; height: auto;" class="wp2"></div>
@@ -187,7 +190,9 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3 class="header" style="padding-bottom: 0;">El Esquileo<br>
-                    <p><span style="font-size: 11px;"><em>C. del Infantado, 10, 28730 Buitrago del Lozoya, Madrid</p></em></span>
+                    <p><span style="font-size: 11px;"><em>C. del Infantado, 10, 28730 <br>
+                        Buitrago del Lozoya, Madrid
+                    </p></em></span>
                 </h3>
             </div>
             <div class="col-md-7 text-center"><img src="img/finca.png" style="max-width: 80%; height: auto;" class="wp2"></div>
