--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             <div class="col-md-12 text-center">
                 <h3>¡Nos casamos!</h3>
                 <p>
-                    <em>26 Julio 2025 </em> <br>
-                    <em>Iglesia de Santa María del Castillo, Buitrago de Lozoya</em> <br>
+                    <em><strong>26 Julio 2025 </strong></em> <br>
+                    <em><strong>Iglesia de Santa María del Castillo, Buitrago de Lozoya</strong></em> <br>
                 </p>
                 </div>
                 <div class="col-md-12">
