--- a/index.html
+++ b/index.html
@@ -334,7 +334,10 @@
             </div>
             <div class="col-md-12">
                 <h4 class="header">Buitrago del Lozoya</h4>
-                <p><strong>¿Dónde se encuentra Buitrago del Lozoya?</strong></p>
+                <p>
+                    <img src="img/google_maps_pin.png" alt="Google Maps Pin" style="height:1.5em; vertical-align:middle; margin-right:0.3em;">
+                    <strong>¿Dónde se encuentra Buitrago del Lozoya?</strong>
+                </p>
                 <p>
                 En <b>vehículo particular</b>, si se viaja desde Madrid, hay que desviarse en las salidas 74 ó 76 de la A1 - carretera de Burgos. Desde la ciudad se requiere, si no hay demasiado tráfico, de alrededor de 45/50 minutos. <br>
                 En <b>transporte público</b> el autobús interurbano de la línea 191 parte del intercambiador de Plaza de Castilla cada hora en días de diario u hora y media/dos horas tanto sábados como domingos (consultar horarios aproximados y paradas). Hay que estimar una duración en autobús de alrededor de noventa minutos, prácticamente el doble que en coche. <br>
@@ -379,7 +382,9 @@
                 Más información sobre Buitrago del Lozoya en <i><a href="https://turismo.buitrago.org/" target="_blank">la Oficina de Turismo</a></i>: C/ Tahona, 19. Teléfonos: 91 868 16 15 y 674 38 12 44.<br>
                 </p>
                 
-                <p><strong>Peluquerías</strong></p>
+                <p>
+                    <img src="img/scissors.png" alt="Scissors" style="height:1.5em; vertical-align:middle; margin-right:0.3em;">
+                    <strong>Peluquerías</strong></p>
                 <p>
                 Peluquería AIRE UNISEX - 918 68 14 22 <br>
                 Peluquería Estrella Barroso Perna - 918 68 09 51 <br>
@@ -389,7 +394,9 @@
                 Barba-Dos - 636 26 44 55 <br>
                 </p>
 
-                <p><strong>Dónde comer en Buitrago del Lozoya</strong></p>
+                <p>
+                    <img src="img/yummy.png" alt="Scissors" style="height:1.5em; vertical-align:middle; margin-right:0.3em;">
+                    <strong>Dónde comer en Buitrago del Lozoya</strong></p>
                 <p>
                 Aquí os dejamos algunas recomendaciones gastronómicas tanto en Buitrago de Lozoya como en los alrededores. Pero…¡¡hay muchos más!! <br>
                 </p>
