--- a/index.html
+++ b/index.html
@@ -339,11 +339,13 @@
                     <strong>¿Dónde se encuentra Buitrago del Lozoya?</strong>
                 </p>
                 <p>
-                En <b>vehículo particular</b>, si se viaja desde Madrid, hay que desviarse en las salidas 74 ó 76 de la A1 - carretera de Burgos. Desde la ciudad se requiere, si no hay demasiado tráfico, de alrededor de 45/50 minutos. <br>
-                En <b>transporte público</b> el autobús interurbano de la línea 191 parte del intercambiador de Plaza de Castilla cada hora en días de diario u hora y media/dos horas tanto sábados como domingos (consultar horarios aproximados y paradas). Hay que estimar una duración en autobús de alrededor de noventa minutos, prácticamente el doble que en coche. <br>
+                En <b>vehículo particular</b>, si viajáis desde Madrid, hay que desviarse en la salida 74 o en la 76 de la A1 - carretera de Burgos. Si no hay demasiado tráfico se requieren alrededor de 45/50 minutos. <br>
+                Por el pueblo hay sitios para aparcar pero, por si acaso, os dejamos la recomendación de un espacio para aparcar muy céntrico. Está al aire libre y es gratuito, es el Parking Plaza del Belen Viviente en la  Plaza del Belén Viviente, 4. <br>
+                En <b>transporte público</b> podéis llegar con el autobús interurbano de la línea 191que sale del intercambiador de Plaza de Castilla cada hora en días de diario u hora y media/dos horas los sábados y domingos (consultar horarios aproximados y paradas para estar seguros). El autobús suele tardar alrededor de noventa minutos
                 </p>
-
-                <p><strong> Qué hacer en Buitrago y alrededores. </strong></p>
+                <p>
+                    <img src="img/lupa.png" alt="Lupa" style="height:1.5em; vertical-align:middle; margin-right:0.3em;">
+                    <strong> Qué hacer en Buitrago y alrededores. </strong></p>
                 <p>
                 Opciones para extender la visita a Buitrago no son pocas. He aquí algunas: <br>
                 Si no llegáis el viernes a la visita por el pueblo os recomendamos no perderoslo. Os dejamos los sitios que consideramos imprescindibles para visitar en Buitrago del Lozoya. Están prácticamente en orden, con la ruta más óptima para visitarlos. ¡Son espectaculares! <br>
@@ -410,11 +412,6 @@
                 Restaurante Arandinos Collaspino - Gascones -  615 39 75 96 <br>
                 Restaurante El rincón de merche - Lozoyuela - 918 69 42 34 <br>
                 Restaurante de serrada - Serrada de la fuente - 636 27 80 63 <br>
-                </p>
-
-                <p><strong>Para dejar el coche</strong></p>
-                <p>
-                Por el pueblo hay sitios para aparcar pero, por si acaso, os dejamos la recomendación de un espacio para aparcar muy céntrico. Está al aire libre y gratuito. Parking Plaza del Belen Viviente. Pl. del Belén Viviente, 4.
                 </p>
             </div>
         </div>
