Added blank space.

--- a/index.html
+++ b/index.html
@@ -339,8 +339,9 @@
                     <strong>¿Dónde se encuentra Buitrago del Lozoya?</strong>
                 </p>
                 <p>
-                En <b>vehículo particular</b>, si viajáis desde Madrid, hay que desviarse en la salida 74 o en la 76 de la A1 - carretera de Burgos. Si no hay demasiado tráfico se requieren alrededor de 45/50 minutos. <br>
+                En <b>vehículo particular</b>, si viajáis desde Madrid, hay que desviarse en la salida 74 o en la 76 de la A1 - carretera de Burgos. Si no hay demasiado tráfico se requieren alrededor de 45/50 minutos. 
                 Por el pueblo hay sitios para aparcar pero, por si acaso, os dejamos la recomendación de un espacio para aparcar muy céntrico. Está al aire libre y es gratuito, es el Parking Plaza del Belen Viviente en la  Plaza del Belén Viviente, 4. <br>
+                <br>
                 En <b>transporte público</b> podéis llegar con el autobús interurbano de la línea 191que sale del intercambiador de Plaza de Castilla cada hora en días de diario u hora y media/dos horas los sábados y domingos (consultar horarios aproximados y paradas para estar seguros). El autobús suele tardar alrededor de noventa minutos
                 </p>
                 <p>
