--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 </p>
                 <p>
                 En <b>vehículo particular</b>, si viajáis desde Madrid, hay que desviarse en la salida 74 o en la 76 de la A1 - carretera de Burgos. Si no hay demasiado tráfico se requieren alrededor de 45/50 minutos. 
-                Por el pueblo hay sitios para aparcar pero, por si acaso, os dejamos la recomendación de un espacio para aparcar muy céntrico. Está al aire libre y es gratuito, es el Parking Plaza del Belen Viviente en la  Plaza del Belén Viviente, 4. <br>
+                Por el pueblo hay sitios para aparcar pero, por si acaso, os dejamos la recomendación de un espacio para aparcar muy céntrico. Está al aire libre y es gratuito, es el Parking Plaza del Belén Viviente en la Plaza del Belén Viviente, 4. <br>
                 <br>
                 En <b>transporte público</b> podéis llegar con el autobús interurbano de la línea 191que sale del intercambiador de Plaza de Castilla cada hora en días de diario u hora y media/dos horas los sábados y domingos (consultar horarios aproximados y paradas para estar seguros). El autobús suele tardar alrededor de noventa minutos
                 </p>
@@ -348,16 +348,17 @@
                     <img src="img/lupa.png" alt="Lupa" style="height:1.5em; vertical-align:middle; margin-right:0.3em;">
                     <strong> Qué hacer en Buitrago y alrededores. </strong></p>
                 <p>
-                Opciones para extender la visita a Buitrago no son pocas. He aquí algunas: <br>
-                Si no llegáis el viernes a la visita por el pueblo os recomendamos no perderoslo. Os dejamos los sitios que consideramos imprescindibles para visitar en Buitrago del Lozoya. Están prácticamente en orden, con la ruta más óptima para visitarlos. ¡Son espectaculares! <br>
-                <i><a href="https://turismo.buitrago.org/museo-picasso" target="_blank">Museo Picasso</a></i><br>
-                <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Plaza de la Constitución y Torre del Reloj</a> (principal acceso a la muralla)</i><br>
-                <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Arco de las Nieves</a></i><br>
-                <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Iglesia de Santa María del Castillo</a></i><br>
-                <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Muralla alta y exposición «Dos milenios de artillería»</a> (entradas para acceder a ella, ticket 2€)</i><br>
-                <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Adarve bajo o muralla baja</a></i><br>
-                <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Jardín medieval: Parque de la Villa</a></i><br>
-                <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">El Castillo de los Mendoza y la Coracha</a></i><br>
+                Opciones para extender la visita no son pocas.  <br>
+                Os dejamos los sitios que consideramos imprescindibles para descubrir Buitrago del Lozoya. 
+                Están prácticamente en orden, con la ruta más óptima para visitarlos. ¡Son espectaculares! <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● <i><a href="https://turismo.buitrago.org/museo-picasso" target="_blank">Museo Picasso</a></i><br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Plaza de la Constitución y Torre del Reloj</a> (principal acceso a la muralla)</i><br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Arco de las Nieves</a></i><br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Iglesia de Santa María del Castillo</a></i><br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Muralla alta y exposición «Dos milenios de artillería»</a> (entradas para acceder a ella, ticket 2€)</i><br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Adarve bajo o muralla baja</a></i><br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">Jardín medieval: Parque de la Villa</a></i><br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● <i><a href="https://turismo.buitrago.org/que-visitar" target="_blank">El Castillo de los Mendoza y la Coracha</a></i><br>
                 </p>
 
                 <p>
@@ -389,30 +390,30 @@
                     <img src="img/scissors.png" alt="Scissors" style="height:1.5em; vertical-align:middle; margin-right:0.3em;">
                     <strong>Peluquerías</strong></p>
                 <p>
-                Peluquería AIRE UNISEX - 918 68 14 22 <br>
-                Peluquería Estrella Barroso Perna - 918 68 09 51 <br>
-                Peluquería La niña de los peines - 623 47 73 93 <br>
-                Barber norte - 633 47 28 96 <br>
-                Peluquería de varones Dos Amigos - 624 81 80 30 <br>
-                Barba-Dos - 636 26 44 55 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Peluquería AIRE UNISEX - 918 68 14 22 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Peluquería Estrella Barroso Perna - 918 68 09 51 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Peluquería La niña de los peines - 623 47 73 93 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Barber norte - 633 47 28 96 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Peluquería de varones Dos Amigos - 624 81 80 30 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Barba-Dos - 636 26 44 55 <br>
                 </p>
 
                 <p>
                     <img src="img/yummy.png" alt="Scissors" style="height:1.5em; vertical-align:middle; margin-right:0.3em;">
                     <strong>Dónde comer en Buitrago del Lozoya</strong></p>
                 <p>
-                Aquí os dejamos algunas recomendaciones gastronómicas tanto en Buitrago de Lozoya como en los alrededores. Pero…¡¡hay muchos más!! <br>
+                Os dejamos algunas recomendaciones gastronómicas tanto en Buitrago de Lozoya como en los alrededores. Pero…¡¡hay muchas más!! <br>
                 </p>
                 <p>
-                Asador Las Murallas - Buitrago del lozoya - 918 68 04 84 <br>
-                Restaurante El espolón- Buitrago del lozoya - 918 68 14 49 <br>
-                Cueva El matador- El molar - 918 41 03 93 <br>
-                Restaurante El tascon - El Cuadron - 615 09 37 55 <br>
-                Parrilla Groucho - Harpo Restaurante - Pinilla de buitrago -  918 69 50 84 <br>
-                Taberna del chato - San Mamés - 674 02 59 69 <br>
-                Restaurante Arandinos Collaspino - Gascones -  615 39 75 96 <br>
-                Restaurante El rincón de merche - Lozoyuela - 918 69 42 34 <br>
-                Restaurante de serrada - Serrada de la fuente - 636 27 80 63 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Asador Las Murallas - Buitrago del Lozoya - 918 68 04 84 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Restaurante El Espolón- Buitrago del Lozoya - 918 68 14 49 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Cueva El Matador- El Molar - 918 41 03 93 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Restaurante El Tascón - El Cuadrón - 615 09 37 55 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Parrilla Groucho - Harpo Restaurante - Pinilla de Buitrago -  918 69 50 84 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Taberna del Chato - San Mamés - 674 02 59 69 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Restaurante Arandinos Collaspino - Gascones -  615 39 75 96 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Restaurante El Rincón de Merche - Lozoyuela - 918 69 42 34 <br>
+                &nbsp;&nbsp;&nbsp;&nbsp; ● Restaurante de Serrada - Serrada de la Fuente - 636 27 80 63 <br>
                 </p>
             </div>
         </div>
